fixes radio button alignment on Safari (#3678)

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -34,6 +34,7 @@
 
 .label-input > label {
   display: inline-flex;
+  align-items: center;
 }
 
 .label-input > input,
